# kasonka_gui

./: .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/lib/: central_lib.rs  mod.rs  model_lib.rs
src/lib/: AudioList.svelte  Button.svelte  Card.svelte  CardList.svelte  Footer.svelte  Header.svelte  ListBox.svelte  Notification.svelte  types.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/credits/: +page.svelte
src/routes/parametre/: +page.svelte
src/routes/playlist/: +page.svelte
src/routes/settings/: +page.svelte
