[package]
name = "kasonka"
version = "0.1.0"
description = "Kasonka App"
authors = ["K-A-R-I-M"]
license = ""
repository = ""
default-run = "kasonka"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["shell-sidecar"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.16.0"
regex = "1"
rodio = "0.17.1"
souvlaki = "0.6.0"
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
